Added screen to CSS class

--- a/django_switch_user/templates/django_switch_user/switch_user_form.html
+++ b/django_switch_user/templates/django_switch_user/switch_user_form.html
@@ -44,7 +44,7 @@
 
 </style>
 
-<div class="switch-user-panel">
+<div class="switch-user-panel screen">
 	<div class="switch-user-toggles-this" style="display:none;">
 		<form action="." method="post">
 		{% csrf_token %}	
